--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^3.1.3"
   },
   "devDependencies": {
+    "@types/graphql": "^14.0.3",
     "merge-graphql-schemas": "^1.5.7",
     "nodemon": "^1.18.5",
     "tslint-config-prettier": "^1.15.0"
