--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "inside-the-hood",
-  "version": "1.0.0",
-  "description": "Inside the hood",
-  "main": "src/index.js",
-  "author": "Hoodfc",
-  "license": "MIT",
-  "scripts": {
-    "dev": "nodemon -x ts-node --no-cache src/index.ts",
-    "schema": "ts-node src/schema/index.ts && graphqlgen",
-    "prova": "ts-node prova.ts"
-  },
-  "dependencies": {
-    "apollo-server-express": "^2.1.0",
-    "express": "^4.16.4",
-    "graphql": "^14.0.2",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.1.3"
-  },
-  "devDependencies": {
-    "@types/graphql": "^14.0.3",
-    "merge-graphql-schemas": "^1.5.7",
-    "nodemon": "^1.18.5",
-    "tslint-config-prettier": "^1.15.0"
-  }
+   "name": "inside-the-hood",
+   "version": "1.0.0",
+   "description": "Inside the hood",
+   "main": "src/index.js",
+   "author": "Hoodfc",
+   "license": "MIT",
+   "scripts": {
+      "dev": "nodemon -x ts-node --no-cache src/index.ts",
+      "schema": "ts-node src/schema/index.ts && graphqlgen",
+      "prova": "ts-node prova.ts"
+   },
+   "dependencies": {
+      "apollo-server-express": "^2.1.0",
+      "express": "^4.16.4",
+      "graphql": "^14.0.2",
+      "pg": "^7.6.0",
+      "reflect-metadata": "^0.1.10",
+      "ts-node": "^7.0.1",
+      "typeorm": "0.2.8",
+      "typescript": "^3.1.3"
+   },
+   "devDependencies": {
+      "@types/graphql": "^14.0.3",
+      "@types/node": "^8.0.29",
+      "merge-graphql-schemas": "^1.5.7",
+      "nodemon": "^1.18.5",
+      "tslint-config-prettier": "^1.15.0",
+      "ts-node": "3.3.0",
+      "typescript": "2.5.2"
+   }
 }
