--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
       "typescript": "^3.1.3"
    },
    "devDependencies": {
+      "@types/bcrypt": "^3.0.0",
       "@types/graphql": "^14.0.3",
       "@types/node": "^8.0.29",
+      "bcrypt": "^3.0.2",
       "merge-graphql-schemas": "^1.5.7",
       "nodemon": "^1.18.5",
-      "tslint-config-prettier": "^1.15.0",
       "ts-node": "3.3.0",
+      "tslint-config-prettier": "^1.15.0",
       "typescript": "2.5.2"
    }
 }
