--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
    },
    "dependencies": {
       "apollo-server-express": "^2.1.0",
+      "class-validator": "^0.9.1",
       "express": "^4.16.4",
       "graphql": "^14.0.2",
       "pg": "^7.6.0",
