--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
    "dependencies": {
       "apollo-server-express": "^2.1.0",
       "class-validator": "^0.9.1",
+      "cors": "^2.8.4",
       "express": "^4.16.4",
+      "express-session": "^1.15.6",
       "graphql": "^14.0.2",
       "pg": "^7.6.0",
       "reflect-metadata": "^0.1.10",
@@ -23,6 +25,7 @@
    },
    "devDependencies": {
       "@types/bcrypt": "^3.0.0",
+      "@types/express-session": "^1.15.11",
       "@types/graphql": "^14.0.3",
       "@types/node": "^8.0.29",
       "bcrypt": "^3.0.2",
