--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
    },
    "dependencies": {
       "apollo-server-express": "^2.1.0",
+      "body-parser": "^1.18.3",
       "class-validator": "^0.9.1",
       "connect-redis": "^3.4.0",
       "cors": "^2.8.4",
